# local-video-summarizer

./: README.md  check_cuda.py  pyproject.toml  requirements.txt  run.bat
src/summarizer/: cli.py  config.py  downloader.py  streamlit_app.py  summarizer.py  transcriber.py  transcript_fetcher.py
