[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-video-summarizer"
version = "0.1.0"
description = "Audio/Video summarizer for local files or YouTube videos with Whisper and Ollama"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp",
    "faster-whisper",
    "torch",
    "python-dotenv",
    "requests",
    "streamlit",
    "youtube-transcript-api",
]

[project.scripts]
summarizer = "summarizer.cli:main"
